unit tests passed for: all commands, clibackendclient